--- a/gantt.css
+++ b/gantt.css
@@ -53,8 +53,8 @@
   overflow-y: auto;
   box-sizing: border-box;
   padding: 20px;
-  padding-bottom: 60px;  /* Luft under sista raden */
-  max-height: 500px;     /* Tak för höjden */
+  //padding-bottom: 60px;  /* Luft under sista raden */
+  //max-height: 500px;     /* Tak för höjden */
   white-space: nowrap;
 }
 
