--- a/gantt.css
+++ b/gantt.css
@@ -122,3 +122,10 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+#gantt-container::after {
+  content: "";
+  display: block;
+  height: 40px; /* Samma som barHeight */
+}
+
