--- a/styles.css
+++ b/styles.css
@@ -667,3 +667,26 @@ details[open] .summary-icon {
 .maps-links a {
   display: block;
 }
+
+.menu-toggle {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  display: block;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.menu-toggle svg {
+  width: 28px;
+  height: 28px;
+  stroke: #148424;
+}
+
+.main-nav {
+  position: relative;
+}
