--- a/styles.css
+++ b/styles.css
@@ -185,8 +185,8 @@ h1#page-title {
 }
 
 .menu-toggle svg {
-  width: 28px;
-  height: 28px;
+  width: 100%;
+  height: 100%;
   fill: #148424;
 }
 }
