--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ h1#page-title {
   align-items: center;
   position: relative;
   margin-bottom: 1rem;
+  padding-top: 0.5rem; /* denna rad jämnar ut vertikal placering */
 }
 
 .nav-wrapper {
