--- a/gantt.css
+++ b/gantt.css
@@ -37,6 +37,14 @@
   min-width: 150px;
 }
 
+.gantt-wrapper #filters select {
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23148424" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 0.6rem center;
+  background-size: 1rem;
+  padding-right: 2rem;
+}
+
 .gantt-wrapper .view-buttons button.active {
   background: #2196F3;
   color: #fff;
